try to fix icon

--- a/public/now.json
+++ b/public/now.json
@@ -10,6 +10,16 @@
     {
       "src": ".*",
       "dest": "/index.html"
+    },
+    { "src": "^/manifest.json", 
+      "dest": "/manifest.json" 
+    },
+    {
+      "src": "^/favicon.ico$",
+      "dest": "/favicon.ico"
+    },
+    {
+      "handle":"filesystem"
     }
   ]
 }
