--- a/public/now.json
+++ b/public/now.json
@@ -3,21 +3,12 @@
   "alias": "foodrecipes",
   "name": "foodrecipes",
   "routes": [
-    {
-      "src": "^/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": ".*",
-      "dest": "/index.html"
+    { 
+      "handle": "filesystem" 
     },
     { 
-      "src": "^/manifest.json$", 
-      "dest": "/manifest.json" 
-    },
-    {
-      "src": "^/favicon.ico$",
-      "dest": "/favicon.ico"
+      "src": "/.*", 
+      "dest": "/index.html" 
     }
   ]
 }
